Design tweaks and beginning search & filter layout issues

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -120,6 +120,7 @@ a.fusion-button {
 .fusion-secondary-main-menu {
   background-color: $sky-blue !important;
   margin-bottom: 4px;
+  border-bottom: none !important;
 }
 
 .fusion-main-menu a {
@@ -174,7 +175,7 @@ body.fusion-header-layout-v4:not(.fusion-header-layout-v6).fusion-top-header {
 .reduced-width,
 .fusion-body .fusion-builder-column-1.homepage-slidertext-container,
 .fusion-body .fusion_builder_column.homepage-narrow-text-container {
-  width: 750px !important;
+  width: 840px !important;
   margin-left: auto;
   margin-right: auto;
 }
@@ -182,6 +183,9 @@ body.fusion-header-layout-v4:not(.fusion-header-layout-v6).fusion-top-header {
 .fusion-body .fusion-builder-column-1.homepage-slidertext-container {
   left: 0;
   right: 0;
+  .fusion-button {
+    margin-top: 30px;
+  }
 }
 
 .homepage-container-margin {
